[package]
name = "elevators"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = { path = "../amethyst", features = ["metal", "shader-compiler"] }
amethyst-imgui = { path = "../amethyst-imgui", features = ["metal"] }
rand = "0.7.0"

[features]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
